k8s/fastapi.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fastapi
  namespace: backend
  labels:
    app: fastapi
spec:
  selector:
    matchLabels:
      app: fastapi
  template:
    metadata:
      labels:
        app: fastapi
    spec:
      containers:
      - name: fastapi
        image: karmel00/fastapi:amdv2
        resources:
          requests:
            memory: "64Mi"
            cpu: "150m"
          limits:
            memory: "128Mi"
            cpu: "350m"
        ports:
        - containerPort: 80
        livenessProbe:
          httpGet:
            path: /health
            port: 80
          initialDelaySeconds: 5
          failureThreshold: 3
          periodSeconds: 10
        startupProbe:
          httpGet:
            path: /health
            port: 80
          failureThreshold: 30
          periodSeconds: 2
        readinessProbe:
          httpGet:
            path: /readiness
            port: 80
          initialDelaySeconds: 5
          failureThreshold: 3
          periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: fastapi-service
  namespace: backend
spec:
  selector:
    app: fastapi
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
